fix spacing on sponsor button

--- a/styles.css
+++ b/styles.css
@@ -238,6 +238,10 @@ span {
     .text {
         display: none;
     }
+
+    .sponsor {
+        margin-top: 30px;
+    }
 }
 
 @media (max-width: 540px) {
